--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="naver-site-verification" content="a8bbd2b1dd8c9375a7d014f17ab72f431ab824a6" />
     <title>연인역할유형검사 | LoReT Test
     </title>
   </head>
