--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="/favicon.ico" />
+     <!-- meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="naver-site-verification" content="a8bbd2b1dd8c9375a7d014f17ab72f431ab824a6" />
-    <title>연인역할유형검사 | LoReT Test
-    </title>
+    <meta property="og:url" content="https://project1test.com">
+    <meta property="og:title" content="연인역할유형검사 | LoReT Test">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="/icon.png">
+    <meta property="og:description" content="Test Now! - 연인역할을 확인할 수 있는 검사">
+
+    <title>연인역할유형검사 | LoReT Test</title>
   </head>
   <body>
     <div id="root"></div>
